--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -16,10 +17,14 @@
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "deepmerge": "^4.2.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
