--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.7",
     "postcss-cli": "^9.1.0",
+    "postcss-nesting": "^10.1.2",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
